# Bern

./: .gitattributes  .gitignore  Bern.cabal  LICENSE  README.MD  flake.nix
app/: Main.hs
docs/: documentation.html  index.html  style.css
docs/install/: install_bern.ps1  install_bern.sh
extension/: .vscodeignore  README.md  bern-syntax-0.0.4.vsix  bern-syntax-0.0.5.vsix  bern-syntax-0.0.9.vsix  extension.js  language-configuration.json  package-lock.json  package.json
extension/syntaxes/: bern.tmLanguage.json
lib/: assert.brn  core.brn  crypto.brn  math.brn  path.brn  random.brn  strings.brn  url.brn
src/Data/Hashtable/: Hashtable.hs
src/Language/: Ast.hs  Eval.hs  FFI.hs  Ffi.hs  Helpers.hs
src/Parsing/: Parser.hs
tests/: adt_iterable.brn  bernparsec.brn  bernparsec_adt.brn  bernparsec_calculator.brn  case_is.brn  cbind.brn  core.brn  crypto.brn  csv.brn  error.brn  http_server.brn  if_expr.brn  import_conflict_alias.brn  import_conflict_alias_ambiguous.brn  import_conflict_ambiguous.brn  import_conflict_liba.brn  import_conflict_libb.brn  import_conflict_qualified.brn  math.brn  path.brn  random.brn  strings.brn  url.brn
tests/raylib-tests/: ball.brn  color.brn
tutorials/: adt.brn  basics.brn  conditionals.brn  functions.brn  imports.brn  input.brn  loops.brn  objects.brn
tutorials/arrays/: lists.brn  sets.brn
