cabal-version:      3.0
name:               Bern
version:            0.1.0.0
synopsis:           Interpreted Dynamic Typed Programming Language
-- description:
homepage:           mirvox.xyz
license:            BSD-3-Clause
license-file:       LICENSE
author:             Miguel Aguiar
maintainer:         miguel.aguiar1906@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Language.Ast,
                      Language.Eval,
                      Language.FFI,
                      Language.Helpers,
                      Parsing.Parser,
                      Data.Hashtable.Hashtable
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      megaparsec,
                      parser-combinators,
                      hashtables,
                      containers,
                      directory,
                      filepath
    hs-source-dirs:   src
    default-language: Haskell2010

executable Bern
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        Bern,
        megaparsec

    hs-source-dirs:   app
    default-language: Haskell2010